--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         crossorigin="anonymous"></script>
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+    <!-- client js -->
+    <script src="discount.js"></script>
     <!-- client css -->
     <link rel="stylesheet" href="client.css" />
 </head>
@@ -80,6 +82,49 @@
                 <hr class="my-4">
                 <p class="col-md-8 fs-4">For exceptional international quisuine, look no further.</p>
                 <button class="btn btn-primary btn-lg" type="button"><i class="bi bi-check"></i> Order Now</button>
+            </div>
+        </div>
+        <div class="row p-2 m-2" id="discount-row">
+            <div class="col px-2 py-4">
+                <h3>Tis the seasoning</h3>
+                <div class="mb-4">
+                    Order today! Save 12.5% on Chef Anton's Italian Seasoning.
+                    You don't want to make Chef Anton mad, do you?
+                </div>
+                <i>Discount expires: 2/25/2025</i><br />
+                <i class="bi bi-receipt"></i> <a href="#" class="discount"
+                    data-product="Chef Anton's Italian Seasoning" data-title="Tis the seasoning" data-code="2024">Discount Code</a>
+            </div>
+            <div class="col px-2 py-4">
+                <h3>Go Green</h3>
+                <div class="mb-4">
+                    Genen Shouyu goes on sale very rarely. Order now to save 10% off our already low price.
+                </div>
+                <i>Discount expires: 2/25/2025</i><br />
+                <i class="bi bi-receipt"></i> <a href="#" class="discount"
+                    data-product="Genen Shouyu" data-title="Once in a lifetime" data-code="2020">Discount Code</a>
+            </div>
+            <div class="col px-2 py-4">
+                <h3>Half Price</h3>
+                <div class="mb-4">
+                    Just because you can't pronounce "Schoggi Schokolade" doesn't mean you shouldn't buy it. Get it now for 50%.!
+                </div>
+                <i>Discount expires: 2/25/2025</i><br />
+                <i class="bi bi-receipt"></i> <a href="#" class="discount"
+                    data-product="Schoggi Schokolade" data-title="Rhymes with lemonade" data-code="2000">Discount Code</a>
+            </div>
+        </div>
+    </div>
+    <!-- toast -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
+            <div class="toast-header">
+                <strong class="me-auto" id="product">Product</strong>
+                <small class="text-body-secondary" id="title">discount title</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body" id="code">
+                Discount Code: 1234
             </div>
         </div>
     </div>
