--- a/balloons.html
+++ b/balloons.html
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" class="btn btn-outline-primary mt-3" id="submit">Submit</button>
+                    <button type="button" class="btn btn-outline-primary mt-3 balloon-submit" id="submit">Submit</button>
                 </div>
                 <div class="col">
                     <img src="media/red.png" class="ball" alt="red balloon" id="redImg" />
@@ -85,6 +85,19 @@
                 </div>
             </div>
         </form>
+    </div>
+    <!-- toast -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong class="me-auto">Select a color</strong>
+                <small>Color needed</small>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                Please select at least one color before submitting.
+            </div>
+        </div>
     </div>
 </body>
 
