--- a/balloons.html
+++ b/balloons.html
@@ -44,7 +44,7 @@
 <body>
     <!-- content -->
     <div class="container">
-        <h1 class="greeting animate__animated animate__heartBeat">Happy Birthday!</h1>
+        <h1 class="greeting animate__animated" id="heading">Happy Birthday!</h1>
         <hr />
         <hr />
         <hr />
