--- a/balloons.html
+++ b/balloons.html
@@ -62,15 +62,15 @@
                     <div class="card mt-4">
                         <div class="card-body" id="checkbox-card">
                             <h5 class="card-title">Select your favorite balloons</h5>
-                            <div class="form-check">
+                            <div class="form-check" id="red-box">
                                 <input type="checkbox" class="form-check-input" id="red">
                                 <label class="form-check-label" for="red">Red balloons</label>
                             </div>
-                            <div class="form-check">
+                            <div class="form-check" id="green-box">
                                 <input type="checkbox" class="form-check-input" id="green">
                                 <label class="form-check-label" for="green">Green balloons</label>
                             </div>
-                            <div class="form-check">
+                            <div class="form-check" id="blue-box">
                                 <input type="checkbox" class="form-check-input" id="blue">
                                 <label class="form-check-label" for="blue">Blue balloons</label>
                             </div>
