[3.05] Check/Uncheck All Buttons

--- a/balloons.html
+++ b/balloons.html
@@ -77,6 +77,8 @@
                         </div>
                     </div>
                     <button type="button" class="btn btn-outline-primary mt-3 balloon-submit" id="submit">Submit</button>
+                    <button type="button" class="btn btn-outline-primary mt-3 balloon-submit" id="check-all">Check All</button>
+                    <button type="button" class="btn btn-outline-primary mt-3 balloon-submit" id="uncheck-all">Uncheck All</button>
                 </div>
                 <div class="col">
                     <img src="media/red.png" class="ball" alt="red balloon" id="redImg" />
